<resources>
    <string name="app_id">564c3d3e</string>
    <string name="app_name">金牌管家</string>
    <string name="company_name">西安亮点网络科技有限公司</string>
    <string name="action_settings">设置</string>
    <string name="button_update">修改</string>
    <string name="button_add">添加</string>
    <string name="button_release">发布</string>
    <string name="write_info">填写信息</string>
    <string name="update_info">修改信息</string>
    <string name="action_cancel">取消</string>
    <string name="action_pick">从手机相册选择</string>
    <string name="action_capture">拍照</string>
    <string name="action_picture_select">拍照</string>
    <string name="module_title_home">首页</string>
    <string name="module_title_find">发现</string>
    <string name="module_title_me">我</string>
    <string name="button_search">搜索</string>
    <string name="button_confirm">确定</string>
    <string name="button_delete">删除</string>
    <string name="button_next">下一步</string>
    <string name="progressbar_title">加载中&#8230;</string>
    <string name="get_valid_code">获取</string>
    <string name="get_valid_desc">验证码已发送，请注意查收！没有收到？1分钟可重新获取！</string>
    <string name="get_valid_error">验证码错误，请重新输入！</string>
    <string name="login_error">手机号或密码错误！</string>
    <string name="not_exist_property">该小区物业还没有入驻！</string>
    <string name="not_exist_house">未绑定房屋,请先绑定房屋再试</string>
    <string name="call_property">致电物业</string>
    <string name="property_phone_none">物业没有留电话！</string>
    <string name="network_none_tip">暂时无网络,请检查网络链接&#8230;</string>
    <string name="network_error">请求服务器错误，请稍后再试</string>
    <string name="network_request_fail">请求服务器失败，请稍后再试</string>
    <string name="response_data_isNull">暂时没有数据</string>
    <string name="share">分享</string>
    <string name="refuse">拒绝</string>
    <string name="refuse_detail">服务器拒绝访问</string>
    <string name="repeat">重复</string>
    <string name="select_time">请选择时间</string>
    <string name="phone_is_null">手机号不能为空</string>
    <string name="phone_error">手机号输入有误</string>
    <string name="check_accepted">请勾选同意用户服务协议</string>
    <string name="valid_is_null">验证码不能为空</string>
    <string name="password_is_null">密码不能为空</string>
    <string name="welcome_owner">欢迎业主回家</string>
    <string name="activity_login_title">用户登录</string>
    <string name="activity_login_phone">手机号码</string>
    <string name="activity_login_password">用户密码</string>
    <string name="activity_login_lgoin">登录</string>
    <string name="activity_login_forgot">忘记密码？</string>
    <string name="activity_login_register">注册新用户</string>
    <string name="activity_register_phone_exist">手机号码已存在</string>
    <string name="fragment_home_title">忆江南</string>
    <string name="fragment_home_property_notification">通知公告</string>
    <string name="fragment_home_property_houseinfo">房屋信息</string>
    <string name="fragment_home_property_notice">联系物业</string>
    <string name="fragment_home_property_services">物业服务</string>
    <string name="home_property_notification">通知</string>
    <string name="home_property_announcement">公告</string>
    <string name="home_property_survey">调研</string>
    <string name="property_services_area">建筑面积:</string>
    <string name="property_services_gas">燃气</string>
    <string name="property_services_water">水表</string>
    <string name="property_services_electric">电表</string>
    <string name="property_services_fee">物业交费</string>
    <string name="fee">交费</string>
    <string name="have_fee">已交费</string>
    <string name="no_fee">未交费</string>
    <string name="fee_detail">交费详细信息</string>
    <string name="button_go_paid">去交费</string>
    <string name="go_paid_none">请选择费用项！</string>
    <string name="property_services_repair">报修</string>
    <string name="property_services_repair_create">报修</string>
    <string name="repair_confirm">提交报修</string>
    <string name="repair_personal">个人报修</string>
    <string name="repair_public">公共报修</string>
    <string name="repair_close">关闭报修</string>
    <string name="repair_house_info">房屋信息:</string>
    <string name="repair_content_type">报修类型</string>
    <string name="repair_content_tip">报修内容</string>
    <string name="repair_content">请在此处输入您的报修内容，字数最好在100以内</string>
    <string name="property_services_complain">投诉</string>
    <string name="property_services_complain_create">投诉</string>
    <string name="complain_close">关闭投诉</string>
    <string name="complain_confirm">提交投诉</string>
    <string name="complain_tip">投诉内容</string>
    <string name="complain_content">请在此处输入您的投诉内容，字数最好在100以内</string>
    <string name="property_services_communicate">沟通</string>
    <string name="property_services_regulations">物业服务条例</string>
    <string name="property_services_telephone">物业电话</string>
    <string name="fragment_home_yellow_housekeeping">社区服务</string>
    <string name="fragment_home_yellow_housekeeping_desc">家政|保洁|保姆 生活服务</string>
    <string name="fragment_home_yellow_pages">生活黄页</string>
    <string name="fragment_home_yellow_pages_desc">网罗周边信息</string>
    <string name="fragment_home_yellow_education">教育培训</string>
    <string name="fragment_home_yellow_education_desc">提升自我</string>
    <string name="fragment_home_yellow_lease">房屋租赁</string>
    <string name="fragment_home_fee_detail">交费详情</string>
    <string name="fragment_home_fee_confirm">确定交费</string>
    <string name="fragment_home_yellow_lease_detail">房屋租赁详情</string>
    <string name="fragment_home_yellow_lease_list">房屋租赁列表</string>
    <string name="fragment_home_yellow_training">教育培训</string>
    <string name="fragment_home_yellow_map">黄页地图</string>
    <string name="fragment_home_yellow_update_houserent">更新房屋租赁</string>
    <string name="fragment_home_yellow_lease_desc">物业验证</string>
    <string name="fragment_find_market">跳蚤市场</string>
    <string name="fragment_find_market_desc">闲置物品能换钱</string>
    <string name="fragment_find_info">生活资讯</string>
    <string name="fragment_find_info_detail">资讯详情</string>
    <string name="fragment_find_info_desc">打造品质生活</string>
    <string name="fragment_find_weekend">周末去哪儿</string>
    <string name="fragment_find_weekend_desc">世界那么大？</string>
    <string name="fragment_me_phone">暂无帐号</string>
    <string name="fragment_me_thumbnail">更新头像</string>
    <string name="fragment_me_information">我的信息</string>
    <string name="community_mobilization">社区总动员，好礼送不停</string>
    <string name="activity_me_information_name">姓名</string>
    <string name="activity_me_information_success">修改成功！</string>
    <string name="fragment_me_integral">我的积分</string>
    <string name="fragment_me_wallet">我的钱包</string>
    <string name="fragment_me_orders">我的订单</string>
    <string name="fragment_me_address">收货地址</string>
    <string name="fragment_me_address_edit">收货地址的编辑</string>
    <string name="fragment_me_coupons">我的优惠劵</string>
    <string name="fragment_me_shopping_cart">我的购物车</string>
    <string name="fragment_me_change_password">修改密码</string>
    <string name="fragment_me_community">我的小区</string>
    <string name="fragment_me_entry_exit_manage">出入管理</string>
    <string name="fragment_me_coupon">优惠劵</string>
    <string name="fragment_me_community_plus">绑定社区</string>
    <string name="fragment_me_community_btn_delete">解除绑定</string>
    <string name="fragment_me_community_btn_plus">绑定房屋</string>
    <string name="fragment_me_community_build">请选择楼栋</string>
    <string name="fragment_me_community_unit">请选择单元</string>
    <string name="fragment_me_community_house">请选择房屋</string>
    <string name="fragment_me_invite">邀请好友</string>
    <string name="fragment_me_invite_gift">邀请有礼</string>
    <string name="fragment_me_message">消息中心</string>
    <string name="fragment_me_message_detail">消息详情</string>
    <string name="fragment_me_message_list">消息列表</string>
    <string name="fragment_me_publish">我的发布</string>
    <string name="fragment_me_feedback">意见反馈</string>
    <string name="activity_me_feedback_success">反馈成功！</string>
    <string name="activity_me_feedback_edittext">如果您在使用金牌管家的过程发现问题，请及时反馈，谢谢。</string>
    <string name="activity_me_feedback_button">提交意见</string>
    <string name="fragment_me_about">关于</string>
    <string name="fragment_me_check">版本更新</string>
    <string name="common_me_team">研发团队</string>
    <string name="common_me_contract">联系我们</string>
    <string name="common_me_company">西安亮点网络科技有限公司</string>
    <string name="common_me_telephone">029-89322635</string>
    <string name="common_me_business">商家加盟</string>
    <string name="common_me_property">物业合作</string>
    <string name="common_me_broker">全民经纪人</string>
    <string name="fragment_me_logout">退出登录</string>
    <string name="activity_forgot_title">忘记密码</string>
    <string name="activity_forgot_phone">手机号码</string>
    <string name="activity_forgot_valid">验证码</string>
    <string name="activity_forgot_valid_desc">该手机号码未注册，请先注册！</string>
    <string name="activity_forgot_password">输入密码</string>
    <string name="activity_forgot_password_valid">确认密码</string>
    <string name="activity_change_password_title">修改密码</string>
    <string name="activity_change_password">输入新密码</string>
    <string name="activity_old_password">旧密码</string>
    <string name="activity_new_password">新密码</string>
    <string name="activity_change_password_valid">确认密码</string>
    <string name="activity_change_password_valid_error">两次输入的密码不相同，请确认！</string>
    <string name="activity_change_password_error">密码修改失败，请稍后重试！</string>
    <string name="activity_register_title">用户注册</string>
    <string name="activity_register_phone">手机号码</string>
    <string name="activity_register_password">登录密码</string>
    <string name="activity_register_password_valid">密码由字母或数字组成，长度在6&#8211;22位！</string>
    <string name="activity_register_valid">验证码</string>
    <string name="activity_register_referrer">邀请码（选填）</string>
    <string name="activity_register_agree">我已阅读并同意</string>
    <string name="activity_register_agreement">《使用条款和隐私政策》</string>
    <string name="activity_register_register">完成注册</string>
    <string name="activity_register_error">注册失败，请稍后重试！</string>
    <string name="search_community_keywords">小区</string>
    <string name="activity_binding_community_title">绑定社区</string>
    <string name="activity_binding_community_search_text">请输入小区名称</string>
    <string name="correct_input_area">请正确输入小区名称</string>
    <string name="manually_entered_village">请手动输入小区</string>
    <string name="hello_world">Hello world!</string>
    <string name="nofind_men_jin">未找到门禁，请靠近设备后再试</string>
    <string name="noopen_bulebooth">请打开蓝牙后再试</string>
    <string name="noPrpperty">房屋无业主认证，请联系物业</string>
    <string name="nobind_room">请绑定房屋后再试</string>
    <string name="bind_ok">绑定成功</string>
    <string name="welcome_home">欢迎回家</string>
    <string name="have_open">已开门</string>
    <string name="warm_prompt">**温馨提示**</string>
    <string name="please_closedoor">请随手关门</string>
    <string name="no_entrance">该小区未开通门禁，联系物业启用门禁吧</string>
    <string name="use_entrance">启用</string>
    <string name="nouse_entrance">未启用</string>
    <string name="searchnull">未找到您的小区，请点击提交您的小区信息</string>
    <string name="havebind">您已添加该房屋</string>
    <string name="frea_market_pictures">图片(点击图片可进行删除操作)</string>
    <string name="frea_market_goods_title">标题</string>
    <string name="frea_market_goods_content">介绍</string>
    <string name="frea_market_goods_price">价格</string>
    <string name="frea_market_goods_new_price">新品价格</string>
    <string name="frea_market_goods_think_price">一口价</string>
    <string name="frea_market_publish_comfirm">发布闲置</string>
    <string name="weekend_title">标题</string>
    <string name="weekend_address">活动地点</string>
    <string name="weekend_cost">活动费用，如不输入则默认为：免费</string>
    <string name="weekend_sdate">开始日期/时间</string>
    <string name="weekend_stime">开始时间</string>
    <string name="weekend_edate">结束日期/时间</string>
    <string name="weekend_etime">结束时间</string>
    <string name="weekend_memo">活动介绍，字符限制为150字以内</string>
    <string name="weekend_images">宣传图片（图像比例：16:9;点击图片可进行删除操作）</string>
    <string name="weekend_publish">发布活动</string>
</resources>