<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_weekend_create"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/activity_second_titlebar"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp">
        <EditText
                android:id="@+id/et_weekend_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/weekend_title"
                android:textSize="@dimen/font_size_14sp"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp">
        <EditText
                android:id="@+id/et_weekend_address"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/weekend_address"
                android:textSize="@dimen/font_size_14sp"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp">
        <EditText
                android:id="@+id/et_weekend_cost"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:numeric="integer"
                android:hint="@string/weekend_cost"
                android:inputType="numberDecimal"
                android:textSize="@dimen/font_size_14sp"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp">
        <EditText
                android:id="@+id/et_weekend_start_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/weekend_sdate"
                android:textSize="@dimen/font_size_14sp"/>
        <EditText
                android:visibility="gone"
                android:id="@+id/et_weekend_start_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/weekend_stime"
                android:textSize="@dimen/font_size_14sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/dimen_4dp"
                android:paddingRight="@dimen/dimen_4dp"
                android:text="-"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_size_14sp"/>
        <EditText
                android:id="@+id/et_weekend_end_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/weekend_edate"
                android:textSize="@dimen/font_size_14sp"/>
        <EditText
                android:visibility="gone"
                android:id="@+id/et_weekend_end_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/weekend_etime"
                android:textSize="@dimen/font_size_14sp"/>
    </LinearLayout>

    <EditText
            android:id="@+id/et_weekend_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top|left"
            android:hint="@string/weekend_memo"
            android:lineSpacingExtra="@dimen/dimen_8dp"
            android:lines="6"
            android:minHeight="@dimen/dimen_48dp"
            android:minLines="3"
            android:padding="@dimen/dimen_8dp"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/dimen_14dp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_32dp"
            android:background="@color/gray_light_3"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_8dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekend_images"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_size_14sp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/ll_weekend_picture_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_4dp">
        <GridView
                android:id="@+id/gridview"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:horizontalSpacing="3dp"
                android:numColumns="5"
                android:scrollbars="none"
                android:verticalSpacing="5dp" >
        </GridView>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp"
            android:orientation="horizontal">
        <Button
                android:id="@+id/btn_weekend_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/back_button_green"
                android:text="@string/weekend_publish"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_16sp"/>
    </LinearLayout>
</LinearLayout>
