<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_bind_hurse"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/activity_second_titlebar"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_8dp"
        android:paddingRight="@dimen/dimen_8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_12dp"
            android:text="@string/fragment_me_community_build"
            android:textColor="@color/gray"
            android:textSize="@dimen/font_size_16sp"/>
        <TextView
                android:visibility="gone"
                android:id="@+id/aaa"
                android:text="点击"
                android:padding="@dimen/dimen_10dp"
                android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/sr_binding_house_build"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animationCache="true"
            android:drawSelectorOnTop="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_12dp"
            android:text="@string/fragment_me_community_unit"
            android:textColor="@color/gray"
            android:textSize="@dimen/font_size_16sp"/>
        <Spinner
            android:id="@+id/sr_binding_house_unit"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:animationCache="true"
            android:drawSelectorOnTop="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_12dp"
            android:text="@string/fragment_me_community_house"
            android:textColor="@color/gray"
            android:textSize="@dimen/font_size_16sp"/>
        <Spinner
            android:id="@+id/sr_binding_house_room"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:animationCache="true"
            android:drawSelectorOnTop="true"/>

        <Button
            android:id="@+id/btn_binding_house"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_button_login"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:minHeight="@dimen/dimen_48dp"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_16sp"
            android:text="@string/button_confirm"            />
    </LinearLayout>
</LinearLayout>